src/scss/_main.scss
/* ... */
.item {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 0.5rem 0;
  padding: 1rem;

  background-color: var(--color-bg-dark);
}

.actions-divider {
  width: 2px;
  height: 1.75em;
  margin: 0 0.75em;

  background: var(--color-bg-light);
}

// loading ellipsis
.loading-ellipsis::after {
  display: inline-block;
  width: 0;
  overflow: hidden;

  vertical-align: bottom;
  /* ellipsis character */
  animation: ellipsis steps(4, end) 900ms infinite;

  content: '\2026';
}

.util {
  display: flex;
  padding-bottom: 0.3rem;
}

.filtered-repos {
  margin-top: 2em;
}

.org-header {
  display: flex;
  flex: 1;
  align-items: center;
}

.repo-count {
  margin-left: 0.8rem;

  &::before {
    margin-right: 0.3em;

    content: '[';
  }

  &::after {
    margin-left: 0.3em;

    content: ']';
  }
}

// breadcrumb styles
.crumb {
  font-weight: 300;
}

// builds styles for /:org/:repo/:build_number

details.build-toggle {
  position: absolute;
  top: 1em;
  right: 1em;

  flex: 0;
}

.build-toggle .summary {
  position: initial;
}

.build-menu {
  position: absolute;
  top: 0.75rem;
  right: 0.25rem;

  width: max-content;
  min-width: 100%;
  padding: 0;

  font-size: 80%;

  list-style: none;
  background-color: var(--color-bg-dark);
  border: 1px solid var(--color-bg-light);
  box-shadow: 0 0 2px var(--color-black);

  .build-menu-item {
    padding: 0.5rem 1rem;
  }

  .build-menu-item a {
    cursor: pointer;
  }

  @supports (clip-path: inset(50%)) {
    &::after {
      position: absolute;
      top: -5px;
      right: 0;

      display: block;
      width: 10px;
      height: 10px;

      background-color: inherit;
      border: inherit;
      border-radius: 0 0 0 0.25em;
      transform: rotate(135deg);

      content: '';
      clip-path: polygon(0% 0%, 100% 100%, 0% 100%);
    }
  }
}

.builds {
  display: flex;
  flex-direction: column;
}

.hidden-spacer {
  visibility: hidden;
}

.large-loader {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.large-loader .-spinner {
  width: 40px;
  height: 40px;

  border: 2px solid var(--color-text);
  border-top: 2px solid var(--color-bg);
  border-radius: 50%;

  animation: spin 3s linear infinite;
}

.small-loader {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.small-loader .-spinner {
  width: 20px;
  height: 20px;

  border: 2px solid var(--color-offwhite);
  border-top: 2px solid var(--color-bg);
  border-radius: 50%;

  animation: spin 3s linear infinite;
}

.small-loader .-label {
  margin-left: 0.8em;

  font-weight: 300;
  font-size: 14px;
}

.build-container {
  width: 100%;
  margin: 12px 0;
  overflow: hidden;
}

.build-preview-error {
  display: inline-block;
  margin-top: 0.4rem;
  padding: 0.6rem 0.8rem;

  color: var(--color-red-light);
  font-size: 16px;

  background-color: var(--color-bg-dark);
}

.build {
  position: relative;

  display: flex;
  flex-direction: row;
  justify-content: space-between;

  font-weight: 300;
  font-size: 18px;

  border: 2px solid var(--color-bg-dark);
  border-right: 0;
  border-left: 0;
}

.build .status {
  position: relative;

  display: flex;
  flex-direction: column;
  justify-content: space-around;
  margin-top: -2px;
  margin-bottom: -2px;
}

.build-icon {
  margin: 36px;

  stroke: var(--color-bg);

  * {
    fill: none;
  }
}

.build-icon.-pending {
  padding: 8px;

  border: 2px solid var(--color-bg-dark);
  border-radius: 7px;

  fill: var(--color-bg);
}

.build-icon.-pending .bg-fill {
  fill: var(--color-bg);
}

.build .status.-pending {
  background: var(--color-bg-light);
}

.build .status.-running {
  background: var(--color-yellow);
}

.build .status.-success {
  background: var(--color-green);
}

.build .status.-failure,
.build .status.-error {
  background: var(--color-red);
}

.build .info {
  position: relative;

  display: flex;
  flex: 1;
  flex-direction: column;
  justify-content: center;
  min-width: 0;
  padding: 12px 0;

  background: var(--color-bg-dark);
}

.build .row {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0 24px;

  &.-left {
    justify-content: flex-start;
  }

  &.-right {
    justify-content: flex-end;
  }
}

.build .error {
  max-width: 80%;

  color: var(--color-red-light);
  font-size: 16px;
}

.build .error .message {
  margin-left: 0.2em;
}

.log-actions {
  display: flex;
  justify-content: flex-end;
  margin-right: 1rem;

  div:first-child {
    padding-left: 6rem;
  }
}

.git-info {
  display: flex;
  flex-direction: row;
}

.git-info .commit {
  margin: 0 8px 0 0;
}

.git-info .branch {
  margin: 0 8px 0 8px;
}

.git-info .sender {
  margin: 0 8px 0 8px;
}

.commit-msg {
  flex-basis: 80%;
  margin-left: 6px;
  overflow: hidden;

  white-space: nowrap;
  text-overflow: ellipsis;
}

.time-info {
  display: flex;
  flex-direction: row;

  font-weight: 300;
}

.time-info .age {
  margin: 0 4px 0 4px;
}

.time-info .delimiter {
  margin: 0 8px;

  color: var(--color-secondary);
}

.time-info .duration {
  margin: 0 0 0 4px;

  font-family: var(--font-code);
}

.build-animation {
  position: absolute;

  width: 100%;
}

.-running-start {
  stroke: none;
}

.-running-particles {
  stroke: var(--color-yellow);
}

.build-animation.-bottom {
  bottom: -2px;
}

.build-animation.-top {
  top: -2px;
}

.build-animation.-bottom.-running {
  animation: build-status-parallax-running 26s linear 26s infinite,
    build-status-parallax-start 26s linear none;
}

.build-animation.-top.-running {
  animation: build-status-parallax-running 22s linear 22s infinite,
    build-status-parallax-start 22s linear none;
}

.build-animation.-bottom.-start {
  animation: build-status-parallax-start 26s linear none;
}

.build-animation.-top.-start {
  animation: build-status-parallax-start 22s linear none;
}
/* ... */

